
if(TOY_RELEASE)
	add_subdirectory(Logger_native)
else()
	add_subdirectory(Logger)
	add_subdirectory(Window)
endif()

add_subdirectory(Cpp)
add_subdirectory(Env)
add_subdirectory(Text)
add_subdirectory(Txtio)
add_subdirectory(Regex)
add_subdirectory(Path)
add_subdirectory(Time)
add_subdirectory(Audio)
add_subdirectory(File)
add_subdirectory(Split)
add_subdirectory(SQL)
add_subdirectory(Image)
if(TOY_ENABLE_ALPHA_API)
endif()
