
add_subdirectory(gadget)
add_subdirectory(memory)
add_subdirectory(thread)
add_subdirectory(math)
add_subdirectory(bignum)
add_subdirectory(photo)
add_subdirectory(time)
add_subdirectory(parser)
add_subdirectory(archive)
add_subdirectory(font)
add_subdirectory(file)
add_subdirectory(canvas)

if(TOY_ENABLE_ALPHA_API)
add_subdirectory(graph)
add_subdirectory(scene)
add_subdirectory(webp)
add_subdirectory(sql)
endif()
